fix modal overflow

--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -9,6 +9,7 @@
   visibility: hidden;
   opacity: 0;
   transition: opacity .3s;
+  overflow: auto;
 }
 
 .Modal-visible {
